<resources>
    <string name="app_name">MakeItRainApp</string>
    <string name="you_have">You Have :</string>
    <string name="make_it_rain">Make It Rain</string>
    <string name="Money_value">0Rs</string>
    <string name="show_info">Show Info</string>
    <string name="main_activity">Main activity</string>
    <string name="only_if_it_was_that_easy"> </string>
    <string name="imp_message">Only if it was that Easy!!!!!!</string>
    <string name="imp_message2">hello my name is yash and i also want\nto increase my bank balance like that\nbut only if it was that easy!!!!</string>
    <string name="encouraging_message">wow man you are richer per click</string>
    <string name="todo">TODO</string>
    <string name="there_is_no_such_thing_as_get_rich_quick">There is no such thing as get rich quick</string>
</resources>